adding to the project and customizing the audio control

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <P class="music-author">NEFFEX</P>
       </div>
 
-      <input type="range" name="" id="">
+      <audio src="./audio/Go! - NEFFEX.mp3" controls type="audio/mpeg"></audio>
+      <input type="range" value="0" id="progress">
 
       <div class="player-mode">
         <div class="skip">
